Revert "chore: update Angular build command and directory (#150)"
This reverts commit edd9212d4b2dc33265ee96510f9aa4c47e2753ac.

--- a/src/frameworks/angular.json
+++ b/src/frameworks/angular.json
@@ -13,8 +13,8 @@
     "pollingStrategies": [{ "name": "TCP" }, { "name": "HTTP" }]
   },
   "build": {
-    "command": "ng build --prod",
-    "directory": "dist/"
+    "command": "ng build",
+    "directory": "dist"
   },
   "env": {},
   "plugins": []
